# pythonProject

./: .gitignore  .replit  AI_DEAL_VALUE_CALCULATOR.md  DATABASE_MERGE_REPORT.md  DEPLOYMENT_GUIDE.md  EMAIL_CONFIGURATION.md  ProjectStatus.db  README.md  RFQ_COMMENTS_FEATURE.md  app.py  create_notifications_schema.sql  hikvision_scraper.py  init_product_notifications.py  migrate_passwords.py  notifications_service.py  pyproject.toml  replit.md
Static/: notifications.js
attached_assets/: POTracking_1763243397991.xlsx  Products_1762185172241.xlsx
templates/: access_control.html  add_user.html  add_vendor_contact.html  admin_deal_value_results.html  admin_deal_value_update.html  admin_reset_password.html  aging_dashboard.html  base.html  cctv_products.html  cctv_smart_selector.html  charts.html  compare_products.html  comparison_charts.html  consultant_projects.html  contractor_projects.html  crm_page.html  detectors_products.html  distributor_detail.html  distributors.html  distributors_old_backup.html  documents_page.html  download_files.html  edit_consultant.html  edit_contractor.html  edit_distributor.html  edit_end_user.html  edit_engineer.html  edit_po.html  edit_po_follow_up.html  edit_product.html  edit_project_pipeline.html  edit_request.html  edit_rfq.html  edit_user.html  edit_vendor.html  edit_vendor_contact.html  end_user_contractors.html  end_user_projects.html  fiber_solution_builder.html  fire_alarm_products.html  (+72 more)
uploads/: CCTV KFS Cost Sheet 25-9.xlsx  Copy of Delivery Details WADI.xlsx  Cost Sheet HPE.xlsx  Cost Sheet KFP.xlsx  Cost Sheet MATV.xlsx  (+2 more)
