[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "werkzeug>=3.1.3",
    "xlsxwriter>=3.2.9",
]
